fix: visible for table, tr, th, and td elements
- Fix visible for table elements
- Add table to visibility demo
- Clean-up visibility demo

--- a/demos/src/demo.scss
+++ b/demos/src/demo.scss
@@ -4,14 +4,15 @@ html {
     font-family: HelveticaNeue, sans-serif;
 }
 
-.demo-visibility {
+.demo-table {
 	td {
-		padding: 5px 0;
+		padding: 5px;
 		border: 1px solid #cccccc;
 	}
 }
 
 .demo-visibility-check {
+	display: block;
 	width: 100%;
 	color: green;
 	line-height: 1em;
